[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scripts/main_game_script.gd" type="Script" id=1]
[ext_resource path="res://Scripts/load_game_script.gd" type="Script" id=2]
[ext_resource path="res://Images/godfather_office_background_TEX.jpeg" type="Texture" id=3]
[ext_resource path="res://Images/F_tex.png" type="Texture" id=4]
[ext_resource path="res://Images/F_pressed_tex.png" type="Texture" id=5]
[ext_resource path="res://Images/F_hover_tex.png" type="Texture" id=6]
[ext_resource path="res://Images/F_clickmask_tex.png" type="BitMap" id=7]
[ext_resource path="res://Scripts/F_button_script.gd" type="Script" id=8]
[ext_resource path="res://Images/Gangster_usable_tex.png" type="Texture" id=9]
[ext_resource path="res://Images/Gangster_Pressed_Tex.png" type="Texture" id=10]
[ext_resource path="res://Images/Gangster_disabled_tex.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Gangster.gd" type="Script" id=12]
[ext_resource path="res://Images/Enforcer_Usable_Tex.png" type="Texture" id=13]
[ext_resource path="res://Images/Enforcer_Pressed_Tex.png" type="Texture" id=14]
[ext_resource path="res://Images/Enforcer_disabled_Tex.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Enforcer.gd" type="Script" id=16]
[ext_resource path="res://Images/Framer_Usable_Tex.png" type="Texture" id=17]
[ext_resource path="res://Images/Framer_Pressed_Tex.png" type="Texture" id=18]
[ext_resource path="res://Images/Framer_Disabled_Tex.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Framer.gd" type="Script" id=20]
[ext_resource path="res://Images/Consigliere_Usable_Tex.png" type="Texture" id=21]
[ext_resource path="res://Images/Consigliere_Pressed_Tex.png" type="Texture" id=22]
[ext_resource path="res://Images/Consigliere_Disabled_Tex.png" type="Texture" id=23]
[ext_resource path="res://Scripts/Consig.gd" type="Script" id=24]
[ext_resource path="res://Images/Hitman_Usable_Tex.png" type="Texture" id=25]
[ext_resource path="res://Images/Hitman_Pressed_Tex.png" type="Texture" id=26]
[ext_resource path="res://Images/Hitman_Disabled_Tex.png" type="Texture" id=27]
[ext_resource path="res://Scripts/Hitman.gd" type="Script" id=28]
[ext_resource path="res://Images/Godfather_Usabled_Tex.png" type="Texture" id=29]
[ext_resource path="res://Images/Godfather_Pressed_Tex.png" type="Texture" id=30]
[ext_resource path="res://Images/Godfather_Disabled_Tex.png" type="Texture" id=31]
[ext_resource path="res://Scripts/Godfather.gd" type="Script" id=32]
[ext_resource path="res://Scripts/wallet_text_script.gd" type="Script" id=33]
[ext_resource path="res://Images/wallet_tex.png" type="Texture" id=34]
[ext_resource path="res://Scripts/LoadDialog.gd" type="Script" id=35]
[ext_resource path="res://Audio/src/finger_snap_src.wav" type="AudioStream" id=36]
[ext_resource path="res://Scripts/particle_position_script.gd" type="Script" id=37]
[ext_resource path="res://Scripts/global_time_script.gd" type="Script" id=38]
[ext_resource path="res://Scripts/settings_script.gd" type="Script" id=39]
[ext_resource path="res://Scripts/ResolutionScript.gd" type="Script" id=40]
[ext_resource path="res://Scripts/ConfirmationDialog.gd" type="Script" id=41]
[ext_resource path="res://Scripts/reset_button_script.gd" type="Script" id=42]
[ext_resource path="res://Scripts/reset_label_script.gd" type="Script" id=43]
[ext_resource path="res://Scripts/quit_game_button.gd" type="Script" id=44]

[node name="ROOT" type="ViewportContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = -1.0
margin_right = 1022.0
margin_bottom = 719.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch = false
stretch_shrink = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="THE LOADNODE" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Hint", "Rect" ]

[node name="F" type="TextureButton" parent="." index="2" groups=[
"persistent",
]]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_click_mask = ExtResource( 7 )
script = ExtResource( 8 )
_sections_unfolded = [ "Pause", "Rect", "Textures" ]

[node name="Gangster" type="TextureButton" parent="F" index="0" groups=[
"persistent",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 30.0
margin_right = 1006.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 11 )
script = ExtResource( 12 )
_sections_unfolded = [ "Pause", "Textures" ]

[node name="Gangster_Gang_Size" type="Label" parent="F/Gangster" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_top = 53.0
margin_right = 491.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Gangster_Cost" type="Label" parent="F/Gangster" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 329.0
margin_top = 16.0
margin_right = 489.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Enforcer" type="TextureButton" parent="F" index="1" groups=[
"persistent",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 513.0
margin_top = 143.0
margin_right = 1009.0
margin_bottom = 239.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 15 )
script = ExtResource( 16 )
_sections_unfolded = [ "Focus", "Pause", "Textures" ]

[node name="Enforcer_Gang_Size" type="Label" parent="F/Enforcer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 50.0
margin_right = 488.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Enforcer_Cost" type="Label" parent="F/Enforcer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 328.0
margin_top = 15.0
margin_right = 484.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Framer" type="TextureButton" parent="F" index="2" groups=[
"persistent",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 250.0
margin_right = 1006.0
margin_bottom = 346.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_disabled = ExtResource( 19 )
script = ExtResource( 20 )
_sections_unfolded = [ "Focus", "Pause", "Textures" ]

[node name="Framer_Gang_Size" type="Label" parent="F/Framer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_top = 56.0
margin_right = 489.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Framer_Cost_Txt" type="Label" parent="F/Framer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 18.0
margin_right = 440.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Consig" type="TextureButton" parent="F" index="3" groups=[
"persistent",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 360.0
margin_right = 1006.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_disabled = ExtResource( 23 )
script = ExtResource( 24 )
_sections_unfolded = [ "Focus", "Pause", "Size Flags", "Textures" ]

[node name="Consig_Gang_Size" type="Label" parent="F/Consig" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 377.0
margin_top = 53.0
margin_right = 489.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Consig_Cost_Txt" type="Label" parent="F/Consig" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 328.0
margin_top = 18.0
margin_right = 472.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hitman" type="TextureButton" parent="F" index="4" groups=[
"persistent",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 470.0
margin_right = 1006.0
margin_bottom = 566.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
texture_disabled = ExtResource( 27 )
script = ExtResource( 28 )
_sections_unfolded = [ "Focus", "Pause", "Textures" ]

[node name="Hitman_Gang_Size" type="Label" parent="F/Hitman" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_top = 53.0
margin_right = 491.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Hitman_Cost_Txt" type="Label" parent="F/Hitman" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 329.0
margin_top = 17.0
margin_right = 486.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Godfather" type="TextureButton" parent="F" index="5" groups=[
"persistent",
]]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 513.0
margin_top = 583.0
margin_right = 1010.0
margin_bottom = 679.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_disabled = ExtResource( 31 )
script = ExtResource( 32 )
_sections_unfolded = [ "Focus", "Pause", "Textures" ]

[node name="Godfather_Gang_Size" type="Label" parent="F/Godfather" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_top = 52.0
margin_right = 490.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Godfather_Cost_Txt" type="Label" parent="F/Godfather" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 13.0
margin_right = 488.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WalletText" type="Label" parent="F" index="6"]

pause_mode = 2
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 183.0
margin_top = 363.0
margin_right = 413.0
margin_bottom = 433.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 33 )
_sections_unfolded = [ "Pause" ]

[node name="WalletTexture" type="TextureRect" parent="F/WalletText" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -150.0
margin_top = -37.0
margin_right = -22.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 34 )
stretch_mode = 0
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AFK_Respect_Dialog" type="AcceptDialog" parent="F" index="7"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 241.0
margin_right = 616.0
margin_bottom = 321.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Alert!"
resizable = false
dialog_hide_on_ok = true
script = ExtResource( 35 )
_sections_unfolded = [ "Pause" ]

[node name="Clap_Effect" type="AudioStreamPlayer2D" parent="F" index="8"]

visible = false
position = Vector2( 501.978, 338.733 )
stream = ExtResource( 36 )
volume_db = -5.0
autoplay = false
max_distance = 5000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="particle_pos" type="Position2D" parent="F" index="9"]

script = ExtResource( 37 )

[node name="GlobalTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true
script = ExtResource( 38 )

[node name="buyMultiplier" type="TextureButton" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -146.0
margin_top = -105.0
margin_right = -51.0
margin_bottom = -26.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null

[node name="SettingsPanel" type="MarginContainer" parent="." index="5"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -529.0
margin_top = 72.0
margin_right = -29.0
margin_bottom = 472.0
rect_min_size = Vector2( 500, 400 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 39 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Pause", "Rect" ]

[node name="Settings_Panel" type="PopupPanel" parent="SettingsPanel" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 500.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
_sections_unfolded = [ "Anchor", "Rect", "Size Flags" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ResolutionButton" type="OptionButton" parent="SettingsPanel/Settings_Panel" index="0"]

pause_mode = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 49.0
margin_right = 231.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
items = [  ]
selected = -1
script = ExtResource( 40 )
_sections_unfolded = [ "Anchor", "Pause" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ResolutionLabel" type="Label" parent="SettingsPanel/Settings_Panel/ResolutionButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -80.0
margin_top = 3.0
margin_right = -1.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Resolution:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor" ]

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="SettingsPanel/Settings_Panel/ResolutionButton" index="2"]

pause_mode = 2
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 120.0
margin_right = 225.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Resolution Change!"
resizable = false
dialog_hide_on_ok = true
script = ExtResource( 41 )
_sections_unfolded = [ "Margin", "Popup" ]

[node name="Button" type="Button" parent="SettingsPanel/Settings_Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 165.0
margin_top = 318.0
margin_right = 323.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 42 )
_sections_unfolded = [ "Anchor" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Reset_Label" type="Label" parent="SettingsPanel/Settings_Panel/Button" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = -29.0
margin_right = 146.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 43 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hard_Quit_Button" type="Button" parent="SettingsPanel/Settings_Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 269.0
margin_top = 44.0
margin_right = -31.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
script = ExtResource( 44 )
_sections_unfolded = [ "Anchor" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="enable_button" from="F" to="F/Gangster" method="_on_F_enable_button"]

[connection signal="enable_button" from="F" to="F/Enforcer" method="_on_F_enable_button"]

[connection signal="enable_button" from="F" to="F/Framer" method="_on_F_enable_button"]

[connection signal="enable_button" from="F" to="F/Consig" method="_on_F_enable_button"]

[connection signal="enable_button" from="F" to="F/Hitman" method="_on_F_enable_button"]

[connection signal="enable_button" from="F" to="F/Godfather" method="_on_F_enable_button"]

[connection signal="pressed" from="F" to="F" method="_on_F_pressed"]

[connection signal="pressed" from="F/Gangster" to="F" method="_on_Gangster_pressed"]

[connection signal="pressed" from="F/Gangster" to="F/Gangster" method="_on_Gangster_pressed"]

[connection signal="respect_from_gangsters" from="F/Gangster" to="F" method="_on_Gangster_respect_from_gangsters"]

[connection signal="pressed" from="F/Enforcer" to="F" method="_on_Enforcer_pressed"]

[connection signal="pressed" from="F/Enforcer" to="F/Enforcer" method="_on_Enforcer_pressed"]

[connection signal="respect_from_enforcers" from="F/Enforcer" to="F" method="_on_Enforcer_respect_from_enforcers"]

[connection signal="pressed" from="F/Framer" to="F" method="_on_Framer_pressed"]

[connection signal="pressed" from="F/Framer" to="F/Framer" method="_on_Framer_pressed"]

[connection signal="respect_from_framers" from="F/Framer" to="F" method="_on_Framer_respect_from_framers"]

[connection signal="pressed" from="F/Consig" to="F" method="_on_Consig_pressed"]

[connection signal="pressed" from="F/Consig" to="F/Consig" method="_on_Consig_pressed"]

[connection signal="respect_from_consigs" from="F/Consig" to="F" method="_on_Consig_respect_from_consigs"]

[connection signal="pressed" from="F/Hitman" to="F" method="_on_Hitman_pressed"]

[connection signal="pressed" from="F/Hitman" to="F/Hitman" method="_on_Hitman_pressed"]

[connection signal="respect_from_hitmen" from="F/Hitman" to="F" method="_on_Hitman_respect_from_hitmen"]

[connection signal="pressed" from="F/Godfather" to="F" method="_on_Godfather_pressed"]

[connection signal="pressed" from="F/Godfather" to="F/Godfather" method="_on_Godfather_pressed"]

[connection signal="respect_from_godfathers" from="F/Godfather" to="F" method="_on_Godfather_respect_from_godfathers"]

[connection signal="confirmed" from="F/AFK_Respect_Dialog" to="F/AFK_Respect_Dialog" method="_on_AFK_Respect_Dialog_confirmed"]

[connection signal="timeout" from="GlobalTimer" to="." method="_on_GlobalTimer_timeout"]

[connection signal="timeout" from="GlobalTimer" to="F/Gangster" method="_on_GlobalTimer_timeout"]

[connection signal="timeout" from="GlobalTimer" to="F/Enforcer" method="_on_GlobalTimer_timeout"]

[connection signal="timeout" from="GlobalTimer" to="F/Framer" method="_on_GlobalTimer_timeout"]

[connection signal="timeout" from="GlobalTimer" to="F/Consig" method="_on_GlobalTimer_timeout"]

[connection signal="timeout" from="GlobalTimer" to="F/Hitman" method="_on_GlobalTimer_timeout"]

[connection signal="timeout" from="GlobalTimer" to="F/Godfather" method="_on_GlobalTimer_timeout"]

[connection signal="confirmed" from="SettingsPanel/Settings_Panel/ResolutionButton/ConfirmationDialog" to="SettingsPanel/Settings_Panel/ResolutionButton/ConfirmationDialog" method="_on_ConfirmationDialog_confirmed"]

[connection signal="pressed" from="SettingsPanel/Settings_Panel/Button" to="SettingsPanel/Settings_Panel/Button" method="_on_Button_pressed"]

[connection signal="pressed" from="SettingsPanel/Settings_Panel/Hard_Quit_Button" to="SettingsPanel/Settings_Panel/Hard_Quit_Button" method="_on_Hard_Quit_Button_pressed"]


